[project]
name = "vaf-am-build-03-identity"
version = "1.0.0"
requires-python = ">=3.11"
description = "VAF AM Series: Identity & Persona Files — Built with Claude AI"
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.0",
]
[project.optional-dependencies]
dev = ["pytest>=8.3.0"]
